<resources>
    <string name="app_name">Novatech</string>
    <string name="login_title">Login</string>
    <string name="login_description">Please sign in to continue</string>
    <string name="login_email">User\'s email</string>
    <string name="login_email_img_description">User\'s email icon</string>
    <string name="login_password">User\'s password</string>
    <string name="login_password_img_description">User\'s password icon</string>
    <string name="login_btn">Login</string>
    <string name="login_logo">Novatech\'s logo</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_project">Project</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_collaborators">Collaborators</string>
    <string name="menu_logout">Logout</string>
    <string name="project_fragment">Hello project</string>
    <string name="forum_fragment">Hello forum</string>
    <string name="profile_title">Profile</string>
    <string name="profile_name">Name</string>
    <string name="profile_id">303330333</string>
    <string name="profile_project">Project name</string>
    <string name="profile_department">Department name</string>
    <string name="profile_telephone">Write the new number</string>
    <string name="profile_email">Write the new email</string>
    <string name="profile_password">*********</string>
    <string name="popup_yes">Yes</string>
    <string name="popup_no">No</string>
    <string name="popup_ok">OK</string>
    <string name="popup_logout">Are you sure you want to log out?</string>
    <string name="profile_picture_description">User\'s picture</string>
    <string name="profile_btn">Save changes</string>
    <string name="profile_current_password">Current Password</string>
    <string name="profile_new_password">New Password</string>
    <string name="popup_yesno_profile">Are you sure you want to keep changes?</string>
    <string name="popup_ok_profile">Changes saved successfully</string>
    <string name="project_individual_name">Project name</string>
    <string name="project_individual_start_date">02/04/2024</string>
    <string name="project_individual_description_title">Description</string>
    <string name="project_individual_description">Write your project description</string>
    <string name="project_individual_status_title">Status</string>
    <string name="project_individual_coordinator_title">Responsible</string>
    <string name="project_individual_budget_title">Budget</string>
    <string name="project_individual_budget">Write the budget of your project</string>
    <string name="project_individual_resources">Resources</string>
    <string name="project_individual_meeting">Meetings</string>
    <string name="project_individual_task">Tasks</string>
    <string name="popup_yesno_project_individual">Are you sure you want to keep changes?</string>
    <string name="popup_ok_project_individual">Changes saved successfully</string>
    <string name="create_project">Create Project</string>
    <string name="name">Name</string>
    <string name="resources">Resources</string>
    <string name="budget">Budget</string>
    <string name="collaborators">Collaborators</string>
    <string name="text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="bar_chart_title">Bar chart</string>
    <string name="bar_chart_project_title">Project</string>
    <string name="free">Free</string>
    <string name="item_log_title">Title</string>
    <string name="item_log_approved_by">Approved by</string>
    <string name="item_log_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="item_log_date_icon">Date icon</string>
    <string name="item_log_date">11/11/24</string>
    <string name="project_log_title">History</string>
    <string name="project_resources_title">Resources</string>
    <string name="project_resources_add_cd">Add a resource</string>
    <string name="item_resource_type">Type</string>
    <string name="item_resource_delete">Delete resource</string>
    <string name="popup_yesno_project_resources_delete">Do you really want to delete %1$s?</string>
    <string name="popup_ok_project_resources_delete">%1$s deleted successfully.</string>
    <string name="project_add_resource_title">New Resource</string>
    <string name="project_add_resource_name">Name</string>
    <string name="project_add_resource_description">Description… </string>
    <string name="project_add_resource_type">Type:</string>
    <string name="project_add_resource_btn">Add resource</string>
    <string name="project_task_todo">To do</string>
    <string name="project_task_doing">Doing</string>
    <string name="project_task_done">Done</string>
    <string name="project_task_title">Tasks</string>
    <string name="project_task_add_btn">Add a task</string>
    <string name="item_task_responsible">Responsible:</string>
    <string name="item_task_delete">Delete task</string>
    <string name="item_task_edit">Edit task</string>
    <string name="item_task_story_points">100</string>
    <string name="project_add_task_title">New Task</string>
    <string name="project_add_task_btn">Add task</string>
    <string name="project_add_task_story_points">Story points</string>
    <string name="project_edit_task_title">Edit Task</string>
    <string name="project_edit_task_btn">Edit task</string>
    <string name="project_edit_task_status">Status</string>
    <string name="collaborators_admin_title">Collaborator\'s list</string>
    <string name="collaborators_admin_add">Add a collaborator</string>
    <string name="collaborators_admin_search">Search a collaborator</string>
    <string name="item_collaborator_delete">Delete collaborator</string>
    <string name="item_collaborator_edit">Edit collaborator</string>
    <string name="failed_server">Failed to connect to server</string>
    <string name="collaborators_add_title">New collaborator</string>
    <string name="collaborators_add_id">Id</string>
    <string name="collaborators_add_email">Email</string>
    <string name="collaborators_add_password">Password</string>
    <string name="collaborators_add_phone">Phone</string>
    <string name="collaborators_add_department">Department:</string>
    <string name="collaborators_add_btn">Add collaborator</string>
    <string name="collaborators_add_project">Project</string>
    <string name="department_it">IT</string>
    <string name="department_admin">Administration</string>
    <string name="department_accountability">Accountability</string>
    <string name="projects_title">Projects</string>
    <string name="projects_add">Add a project</string>
    <string name="projects_chart">Charts of the projects</string>
    <string name="item_project_responsible">Responsible:</string>
    <string name="projects_add_title">New project</string>
    <string name="projects_add_budget">Budget</string>
    <string name="projects_add_description">Description</string>
    <string name="projects_add_responsible">Responsible:</string>
    <string name="projects_add_btn">Add project</string>
    <string name="projects_add_start_date">Start date</string>
    <string name="projects_add_end_date">End date</string>
    <string name="project_individual_collaborators">Collaborators</string>
    <string name="project_collaborators_title">Collaborators</string>
    <string name="add_collaborator">Add Collaborator</string>
    <string name="burndown_chart_title">Burndown Chart</string>
    <string name="project_bar_chart_title">Bar Chart</string>
    <string name="project_burndown_chart_tite">Burndown Chart</string>
    <string name="collaborators_edit_title">Edit collaborator</string>
    <string name="collaborators_edit_password">Write the new password</string>
    <string name="number_format_exception">You must write a number in the budget field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_meetings_title">Meetings</string>
    <string name="projects_add_meeting">New meeting</string>
    <string name="project_add_meeting_medium">Medium:</string>
    <string name="project_add_meeting_btn">Add meeting</string>
</resources>