<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/round_item"
    android:padding="12dp"
    android:layout_marginBottom="14dp">

    <TextView
        android:id="@+id/item_resource_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_log_title"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/item_selected"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_resource_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/item_resource_type"
        android:fontFamily="@font/roboto"
        android:textColor="@color/item_selected"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_resource_title" />

    <TextView
        android:id="@+id/item_resource_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/item_log_description"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/item_selected"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_resource_type" />

    <ImageView
        android:id="@+id/item_resource_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/delete"
        android:contentDescription="@string/item_resource_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>