<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProjectTaskFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="742dp">

        <TextView
            android:id="@+id/project_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/project_task_title"
            android:textColor="@color/item_selected"
            android:fontFamily="@font/roboto"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/project_task_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/back"
            android:backgroundTint="@color/btn_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/project_task_add_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="25dp"
            android:src="@drawable/add_circle"
            app:layout_constraintBottom_toBottomOf="@+id/project_task_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/project_task_title"
            android:contentDescription="@string/project_task_add_btn" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/project_task_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/project_task_tab_layout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/project_task_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/project_task_title"
            app:tabTextColor="@color/item_selected"
            app:tabBackground="@drawable/tab_background"
            app:tabSelectedTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_task_todo" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_task_doing" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_task_done" />
        </com.google.android.material.tabs.TabLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>